--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,7 +1,7 @@
 gab_disabled: "&cGab is disabled"
 gab_enabled: "&2Gab is enabled"
 no_channel: "&3You are now talking in global chat"
-current_channel: "&3You are now talking in <%channel%>"
+current_channel: "&3You are now talking in %channel%"
 gab_desc: "&3Gab &r- &bChat"
 ch_usage_admin: "&lUsage: &r&b/ch &dreload&f"
 ch_usage_user: "&lUsage: &r&b/ch <channel name - if no channel, reverts to global>"
@@ -13,17 +13,17 @@ chat_usage: "&lUsage:&r /ch &b<channel> - Puts you in the channel.  &6(If no cha
 no_channel_perm: "&cSorry, you do not have permission to join this channel"
 global_muted: "&cSorry, you are muted in all channels"
 channel_muted: "&cSorry, you are muted in this channel"
-left_channel: "&cYou have left <%channel%>"
+left_channel: "&cYou have left %channel%"
 leave_global_fail: "&cYou cannot leave global chat"
 not_in_channel: "&cYou are not currently in this channel"
-chx_usage: "&lUsage:&r /<%cmd%> &b<channel>"
+chx_usage: "&lUsage:&r /%cmd% &b<channel>"
 player_added_channel: "&3Player has been added to the channel"
-added_channel: "&3You had been added to <%channel%>"
+added_channel: "&3You had been added to %channel%"
 already_chatter: "&cPlayer is already in this channel"
 player_no_perm: "&cPlayer does not have permission to be in this channel"
 invalid_channel: "&cInvalid channel"
 invalid_player: "&cInvalid player"
-cho_usage: "&lUsage:&r /<%cmd%> &b<player> <channel>"
-chlist_usage: "&lUsage:&r /<%cmd%>"
+cho_usage: "&lUsage:&r /%cmd% &b<player> <channel>"
+chlist_usage: "&lUsage:&r /%cmd%"
 channel_list_prefix: "&lChannels: &f"
 click_to_join: "&bClick to join"
